[gd_scene load_steps=5 format=3 uid="uid://cumebfp17yi6m"]

[ext_resource type="Script" uid="uid://c7yk63ctwjjwc" path="res://Jericho Area No Touchy/Mummy/Scripts/mummyController.gd" id="1_moece"]
[ext_resource type="PackedScene" uid="uid://udq0r6fp3mgm" path="res://GlobalModules/HealthModule.tscn" id="2_l48uc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r1mk7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fd32x"]
radius = 18.248287

[node name="Mummy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_moece")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.5921569, 0, 0, 1)
polygon = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_r1mk7")

[node name="Timers" type="Node2D" parent="."]

[node name="shieldCooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="stopHealCooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="strikeCooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="shieldDuration" type="Timer" parent="Timers"]
one_shot = true

[node name="stopHealDuration" type="Timer" parent="Timers"]
one_shot = true

[node name="HealthModule" parent="." instance=ExtResource("2_l48uc")]

[node name="Pivot" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Pivot"]
position = Vector2(-28, -1)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Area2D"]
shape = SubResource("CircleShape2D_fd32x")
